Solve (with a hack) problem with vertical scrollbar

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,5 +1,7 @@
+#root {
+}
 .app {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: calc(100vh - 20px);
 }
